test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/plx1_deref_in_subscript.plx
pub fn main(none) i32 {
    foo: [[]]i32;
    return 0
}
